<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <!-- Snippet from "Add text fields" section goes here. -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="Servicios del Hogar"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/shr_hint_username"
            android:textColorHint="#000000"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHighlight="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Shrine.TextInputLayout"
            android:textColorLink="#080801"
            android:layout_margin="4dp"


            android:hint="@string/shr_hint_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorLink="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Snippet from "Add buttons" section goes here. -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="52dp"
                android:text="@string/shr_button_next"
                android:textColor="#000000"
                android:textColorHighlight="#0E0E0E"
                app:backgroundTint="#4496A5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="200dp"
                android:text="@string/shr_button_register"
                app:backgroundTint="#4496A5" />

        </RelativeLayout>


        <TextView
            android:id="@+id/txtIrSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/btnGetJWT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get JWT"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            app:backgroundTint="#4496A5"/>

        <Button
            android:id="@+id/btnObtenerUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Obtener Usuario"
            app:backgroundTint="#4496A5"/>

        <TextView
            android:id="@+id/jsonText"
            android:layout_width="384dp"
            android:layout_height="177dp"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
